# OOP-LAB4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  rhomb.h  trapeze.h
tests/: tests.cpp
